--- a/pages/10654.html
+++ b/pages/10654.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1533109147" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1533108238" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8819/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,10 +307,11 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>
- 
- 
-</p>
+      <p>A self-contained proof is given by</p>
+
+<ul>
+<li><span class='newWikiWord'>Christian Haesemeyer<a href='/nlab/new/Christian+Haesemeyer'>?</a></span> and <a class='existingWikiWord' href='/nlab/show/Charles+Weibel'>Charles Weibel</a>, <em>The Norm Residue Theorem in Motivic Cohomology</em> (<a href='http://sites.math.rutgers.edu/~weibel/BK.pdf'>pdf</a>)</li>
+</ul>
 
 <h2 id='references'>References</h2>
 
@@ -321,19 +321,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on May 20, 2017 16:48:02 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
-  (84.73.30.189)
+  <p>
+  Last revised on August  3, 2018 at 21:50:00.
+  See the <a href="https://ncatlab.org/nlab/history/norm residue isomorphism theorem" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/norm+residue+isomorphism+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/norm+residue+isomorphism+theorem/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/norm+residue+isomorphism+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/norm+residue+isomorphism+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/norm+residue+isomorphism+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/norm+residue+isomorphism+theorem/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/norm+residue+isomorphism+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/norm+residue+isomorphism+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/norm residue isomorphism theorem/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/norm+residue+isomorphism+theorem" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/norm+residue+isomorphism+theorem" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/norm+residue+isomorphism+theorem" id="view_source" rel="nofollow">Source</a>
