--- a/pages/1781.html
+++ b/pages/1781.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1533109147" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1533108238" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8818/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,31 +307,34 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>See the 1996 <a href='http://www.math.uiuc.edu/K-theory/0170'>preprint</a> by <a class='existingWikiWord' href='/nlab/show/Vladimir+Voevodsky'>Vladimir Voevodsky</a> and the <a href='http://en.wikipedia.org/wiki/Milnor&#39;s_conjecture'>wikipedia</a> article.</p>
+      <p>See the 1996 <a href='http://www.math.uiuc.edu/K-theory/0170'>preprint</a> by <a class='existingWikiWord' href='/nlab/show/Vladimir+Voevodsky'>Vladimir Voevodsky</a> and the <a href='http://en.wikipedia.org/wiki/Milnor&#39;s_conjecture'>wikipedia</a> article.</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Fabien+Morel'>Fabien Morel</a>, <em>Voevodsky’s proof of Milnor’s conjecture</em>, Bull. Amer. Math. Soc. 35 (1998), 123-143 (<a href='http://www.ams.org/journals/bull/1998-35-02/S0273-0979-98-00745-9/home.html'>web</a>)</li>
 </ul>
 
-<p>
- 
-</p>
+<p>A self-contained proof of Milnor’s conjecture, and more generally the <a class='existingWikiWord' href='/nlab/show/norm+residue+isomorphism+theorem'>norm residue isomorphism theorem</a> is given by</p>
+
+<ul>
+<li><span class='newWikiWord'>Christian Haesemeyer<a href='/nlab/new/Christian+Haesemeyer'>?</a></span> and <a class='existingWikiWord' href='/nlab/show/Charles+Weibel'>Charles Weibel</a>, <em>The Norm Residue Theorem in Motivic Cohomology</em> (<a href='http://sites.math.rutgers.edu/~weibel/BK.pdf'>pdf</a>)</li>
+</ul>
 </div>
 
 <div class="revisedby">
-  Revised on September 26, 2014 10:14:45 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (185.26.182.38)
+  <p>
+  Last revised on August  3, 2018 at 21:49:21.
+  See the <a href="https://ncatlab.org/nlab/history/Milnor&#39;s conjecture" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Milnor%27s+conjecture" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Milnor%27s+conjecture/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Milnor%27s+conjecture" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Milnor%27s+conjecture" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Milnor%27s+conjecture" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Milnor%27s+conjecture/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Milnor%27s+conjecture" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Milnor%27s+conjecture" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Milnor&#39;s conjecture/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Milnor%27s+conjecture" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Milnor%27s+conjecture" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Milnor%27s+conjecture" id="view_source" rel="nofollow">Source</a>
