--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -299,6 +299,12 @@ margin-left: 0em;
 </form>  <span id='navEnd'></span>
 </div>
 
+<div>
+  <p style="color: red">
+    The nLab and nForum are expected to be down for several hour periods between 08:00 UTC on the 11th of August and 04:00 UTC on the 12th of August, due to maintenance at Carnegie Mellom University which will lead to loss of power where the nLab server resides. Apologies for the inconvenience.
+  </p>
+</div>
+
 
 
 
@@ -309,9 +315,9 @@ margin-left: 0em;
 
 <p><strong>higher super <a class='existingWikiWord' href='/nlab/show/Lie+integration'>Lie integration</a> preserves <a class='existingWikiWord' href='/nlab/show/homotopy+fiber+sequences'>homotopy fiber sequences</a></strong></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_b123e82b2fbfed044a5b5040cb3080ea29a27e3b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAAAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAAAA}</annotation></semantics></math>hence in particular <a class='existingWikiWord' href='/nlab/show/higher+central+extensions'>higher central extensions</a></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_e6d18d084623e2ce0db427114f70dcbb980c4b43_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAAAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAAAA}</annotation></semantics></math>hence in particular <a class='existingWikiWord' href='/nlab/show/higher+central+extensions'>higher central extensions</a></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_b123e82b2fbfed044a5b5040cb3080ea29a27e3b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAAA}</annotation></semantics></math><math class='maruku-mathml' display='inline' id='mathml_b123e82b2fbfed044a5b5040cb3080ea29a27e3b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mi>Super</mi><msub><mi>L</mi> <mn>∞</mn></msub><mi>Algebras</mi></mtd> <mtd></mtd> <mtd><mi>SuperSpaces</mi></mtd></mtr> <mtr><mtd><mrow><mtable><mtr><mtd><mover><mi>𝔤</mi><mo>^</mo></mover></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><mi>hofib</mi><mo stretchy='false'>(</mo><msub><mi>μ</mi> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub><mo stretchy='false'>)</mo></mrow></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd></mtr> <mtr><mtd><mi>𝔤</mi></mtd> <mtd><mover><mo>⟶</mo><mrow><msub><mi>μ</mi> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub></mrow></mover></mtd> <mtd><msup><mi>B</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>ℝ</mi></mtd></mtr></mtable></mrow></mtd> <mtd><mphantom><mi>AAAA</mi></mphantom><mover><mo>↦</mo><mrow><mi>Spec</mi><mo maxsize='1.2em' minsize='1.2em'>(</mo><mi>CE</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo maxsize='1.2em' minsize='1.2em'>)</mo></mrow></mover><mphantom><mi>AAAA</mi></mphantom></mtd> <mtd><mrow><mtable><mtr><mtd><mstyle mathvariant='bold'><mi>B</mi></mstyle><mover><mi>G</mi><mo>^</mo></mover></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><mi>hofib</mi><mo stretchy='false'>(</mo><msub><mstyle mathvariant='bold'><mi>c</mi></mstyle> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub><mo stretchy='false'>)</mo></mrow></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd></mtr> <mtr><mtd><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>G</mi></mtd> <mtd><mover><mo>⟶</mo><mrow><msub><mstyle mathvariant='bold'><mi>c</mi></mstyle> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub></mrow></mover></mtd> <mtd><msup><mstyle mathvariant='bold'><mi>B</mi></mstyle> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msup><mi>ℝ</mi></mtd></mtr></mtable></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+<p><math class='maruku-mathml' display='inline' id='mathml_e6d18d084623e2ce0db427114f70dcbb980c4b43_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAAA}</annotation></semantics></math><math class='maruku-mathml' display='inline' id='mathml_e6d18d084623e2ce0db427114f70dcbb980c4b43_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mi>Super</mi><msub><mi>L</mi> <mn>∞</mn></msub><mi>Algebras</mi></mtd> <mtd></mtd> <mtd><mi>SuperSpaces</mi></mtd></mtr> <mtr><mtd><mrow><mtable><mtr><mtd><mover><mi>𝔤</mi><mo>^</mo></mover></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><mi>hofib</mi><mo stretchy='false'>(</mo><msub><mi>μ</mi> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub><mo stretchy='false'>)</mo></mrow></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd></mtr> <mtr><mtd><mi>𝔤</mi></mtd> <mtd><mover><mo>⟶</mo><mrow><msub><mi>μ</mi> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub></mrow></mover></mtd> <mtd><msup><mi>B</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>ℝ</mi></mtd></mtr></mtable></mrow></mtd> <mtd><mphantom><mi>AAAA</mi></mphantom><mover><mo>↦</mo><mrow><mi>Spec</mi><mo maxsize='1.2em' minsize='1.2em'>(</mo><mi>CE</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo maxsize='1.2em' minsize='1.2em'>)</mo></mrow></mover><mphantom><mi>AAAA</mi></mphantom></mtd> <mtd><mrow><mtable><mtr><mtd><mstyle mathvariant='bold'><mi>B</mi></mstyle><mover><mi>G</mi><mo>^</mo></mover></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><mi>hofib</mi><mo stretchy='false'>(</mo><msub><mstyle mathvariant='bold'><mi>c</mi></mstyle> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub><mo stretchy='false'>)</mo></mrow></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd></mtr> <mtr><mtd><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>G</mi></mtd> <mtd><mover><mo>⟶</mo><mrow><msub><mstyle mathvariant='bold'><mi>c</mi></mstyle> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub></mrow></mover></mtd> <mtd><msup><mstyle mathvariant='bold'><mi>B</mi></mstyle> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msup><mi>ℝ</mi></mtd></mtr></mtable></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \array{
   Super L_\infty Algebras &amp;&amp; SuperSpaces
   \\
@@ -344,18 +350,20 @@ margin-left: 0em;
 <p><span class='newWikiWord'>some_picture.png<a href='/nlab/files/some_picture.png'>?</a></span></p>
 
 <p><span class='newWikiWord'>some_picture.png<a href='/nlab/files/some_picture.png'>?</a></span></p>
+
+<p>Test</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August  8, 2018 at 04:52:31.
+  Last revised on August  8, 2018 at 16:25:19.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1635" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1635 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1636" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1636 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
