--- a/pages/17360.html
+++ b/pages/17360.html
@@ -8,13 +8,14 @@
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="robots" content="index,follow" />
-  
- 
-  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+
+
+  <link href="/stylesheets/instiki.css?1534097725" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/mathematics.css?1534319116" media="all" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
-    h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
-      color: #008B26; 
+    h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 {
+      color: #008B26;
     }
     a:visited.existingWikiWord {
       color: #005c19;
@@ -23,7 +24,7 @@
     
   </style>
   
-  <style type="text/css"><!--/*--><![CDATA[/*><!--*/    
+  <style type="text/css"><!--/*--><![CDATA[/*><!--*/
     .toc ul {margin: 0; padding: 0;}
 .toc ul ul {margin: 0; padding: 0 0 0 10px;}
 .toc li > p {margin: 0}
@@ -213,8 +214,8 @@ margin-left: 0em;
 <script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
 <script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
 <script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1532905248" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1532905248" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1533109147" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1533108238" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -293,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8365/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8365/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -308,23 +309,32 @@ margin-left: 0em;
 
 <div id="revision">
       <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#homotopy_groups'>Homotopy groups</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#definition'>Definition</a></li>
+<li><a href='#homotopy_groups'>Homotopy groups</a></li>
+</ul>
+</div>
+
 <h2 id='definition'>Definition</h2>
 
 <p>We shall make use of notions introduced at <a class='existingWikiWord' href='/nlab/show/cubical+set'>cubical set</a>, and of the notation of this page.</p>
 
+<p>
 <div class='num_defn'>
-<h6 id='definition_2'>Definition</h6>
-
-<p>A <a class='existingWikiWord' href='/nlab/show/cubical+Kan+complex'>cubical Kan complex</a> is a <a class='existingWikiWord' href='/nlab/show/cubical+set'>cubical set</a> <math class='maruku-mathml' display='inline' id='mathml_60defc8c1e5ce448bf74f3893570f338a4f96db2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> equipped with the following structure: for every integer <math class='maruku-mathml' display='inline' id='mathml_60defc8c1e5ce448bf74f3893570f338a4f96db2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>≥</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>n \geq 1</annotation></semantics></math>, every integer <math class='maruku-mathml' display='inline' id='mathml_60defc8c1e5ce448bf74f3893570f338a4f96db2_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn><mo>≤</mo><mi>i</mi><mo>≤</mo><mi>n</mi></mrow><annotation encoding='application/x-tex'>1 \leq i \leq n</annotation></semantics></math>, every integer <math class='maruku-mathml' display='inline' id='mathml_60defc8c1e5ce448bf74f3893570f338a4f96db2_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>≤</mo><mi>ϵ</mi><mo>≤</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>0 \leq \epsilon \leq 1</annotation></semantics></math>, and every morphism <math class='maruku-mathml' display='inline' id='mathml_60defc8c1e5ce448bf74f3893570f338a4f96db2_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><msup><mo>⊓</mo> <mrow><mi>n</mi><mo>,</mo><mi>i</mi><mo>,</mo><mi>ϵ</mi></mrow></msup><mo>→</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>f : \sqcap^{n,i,\epsilon} \rightarrow X</annotation></semantics></math> of cubical sets, there is a morphism <math class='maruku-mathml' display='inline' id='mathml_60defc8c1e5ce448bf74f3893570f338a4f96db2_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>:</mo><msup><mo>□</mo> <mi>n</mi></msup><mo>→</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>g : \square^{n} \rightarrow X</annotation></semantics></math> of cubical sets such that the following diagram in <math class='maruku-mathml' display='inline' id='mathml_60defc8c1e5ce448bf74f3893570f338a4f96db2_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mstyle mathvariant='sans-serif'><mi>Set</mi></mstyle> <mrow><msup><mo>□</mo> <mi>op</mi></msup></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathsf{Set}^{\square^{op}}</annotation></semantics></math> commutes.</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_60defc8c1e5ce448bf74f3893570f338a4f96db2_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><msup><mo>⊓</mo> <mrow><mi>n</mi><mo>,</mo><mi>i</mi><mo>,</mo><mi>ϵ</mi></mrow></msup></mtd> <mtd></mtd> <mtd></mtd></mtr> <mtr><mtd><mpadded lspace='-100%width' width='0'><mrow><msub><mi>i</mi> <mrow><mi>i</mi><mo>,</mo><mi>ϵ</mi></mrow></msub></mrow></mpadded><mo stretchy='false'>↓</mo></mtd> <mtd><mover><mo>↘</mo><mi>f</mi></mover></mtd> <mtd></mtd></mtr> <mtr><mtd><msup><mo>□</mo> <mi>n</mi></msup></mtd> <mtd><munder><mo>→</mo><mi>g</mi></munder></mtd> <mtd><mi>X</mi></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+<h6>Definition</h6>
+<p>A <a class='existingWikiWord' href='/nlab/show/cubical+Kan+complex'>cubical Kan complex</a> is a <a class='existingWikiWord' href='/nlab/show/cubical+set'>cubical set</a> <math class='maruku-mathml' display='inline' id='mathml_6bd5e19383c8e283cf31bef0d1ecb557ff4a086e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> equipped with the following structure: for every integer <math class='maruku-mathml' display='inline' id='mathml_6bd5e19383c8e283cf31bef0d1ecb557ff4a086e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>≥</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>n \geq 1</annotation></semantics></math>, every integer <math class='maruku-mathml' display='inline' id='mathml_6bd5e19383c8e283cf31bef0d1ecb557ff4a086e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn><mo>≤</mo><mi>i</mi><mo>≤</mo><mi>n</mi></mrow><annotation encoding='application/x-tex'>1 \leq i \leq n</annotation></semantics></math>, every integer <math class='maruku-mathml' display='inline' id='mathml_6bd5e19383c8e283cf31bef0d1ecb557ff4a086e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>≤</mo><mi>ϵ</mi><mo>≤</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>0 \leq \epsilon \leq 1</annotation></semantics></math>, and every morphism <math class='maruku-mathml' display='inline' id='mathml_6bd5e19383c8e283cf31bef0d1ecb557ff4a086e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><msup><mo>⊓</mo> <mrow><mi>n</mi><mo>,</mo><mi>i</mi><mo>,</mo><mi>ϵ</mi></mrow></msup><mo>→</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>f : \sqcap^{n,i,\epsilon} \rightarrow X</annotation></semantics></math> of cubical sets, there is a morphism <math class='maruku-mathml' display='inline' id='mathml_6bd5e19383c8e283cf31bef0d1ecb557ff4a086e_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>:</mo><msup><mo>□</mo> <mi>n</mi></msup><mo>→</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>g : \square^{n} \rightarrow X</annotation></semantics></math> of cubical sets such that the following diagram in <math class='maruku-mathml' display='inline' id='mathml_6bd5e19383c8e283cf31bef0d1ecb557ff4a086e_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mstyle mathvariant='sans-serif'><mi>Set</mi></mstyle> <mrow><msup><mo>□</mo> <mi>op</mi></msup></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathsf{Set}^{\square^{op}}</annotation></semantics></math> commutes.</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_6bd5e19383c8e283cf31bef0d1ecb557ff4a086e_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><msup><mo>⊓</mo> <mrow><mi>n</mi><mo>,</mo><mi>i</mi><mo>,</mo><mi>ϵ</mi></mrow></msup></mtd> <mtd></mtd> <mtd></mtd></mtr> <mtr><mtd><mpadded lspace='-100%width' width='0'><mrow><msub><mi>i</mi> <mrow><mi>i</mi><mo>,</mo><mi>ϵ</mi></mrow></msub></mrow></mpadded><mo stretchy='false'>↓</mo></mtd> <mtd><mover><mo>↘</mo><mi>f</mi></mover></mtd> <mtd></mtd></mtr> <mtr><mtd><msup><mo>□</mo> <mi>n</mi></msup></mtd> <mtd><munder><mo>→</mo><mi>g</mi></munder></mtd> <mtd><mi>X</mi></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
    \array{
       \sqcap^{n,i,\epsilon}                         &amp;                                            &amp; \\
       \mathllap{i_{i,\epsilon}} \downarrow  &amp; \overset{f}{\searrow}    &amp; \\
       \square^{n}                        &amp; \underset{g}{\rightarrow} &amp; X
    }
 
-</annotation></semantics></math></div></div>
+</annotation></semantics></math></div>
+<p></p>
+</div>
+</p>
 
 <h2 id='homotopy_groups'>Homotopy groups</h2>
 
@@ -333,14 +343,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July 31, 2018 at 18:55:33.
+  Last revised on August 20, 2018 at 13:07:38.
   See the <a href="https://ncatlab.org/nlab/history/cubical Kan complex" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cubical+Kan+complex" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cubical+Kan+complex/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/cubical+Kan+complex" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cubical+Kan+complex" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/cubical+Kan+complex" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cubical+Kan+complex/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/cubical+Kan+complex" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cubical+Kan+complex" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/cubical Kan complex/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
